--- a/composer.json
+++ b/composer.json
@@ -27,15 +27,16 @@
         "php": "~7.2",
         "ext-json": "*",
         "yiisoft/yii2": "~2.0",
-        "dicr/yii2-helper": "~3.5",
+        "dicr/yii2-json": "~1.0",
+        "dicr/yii2-helper": "~4.0",
         "dicr/yii2-http": "~2.1",
         "dicr/yii2-validate": "~2.0"
     },
     "require-dev": {
-        "roave/security-advisories": "dev-master",
-        "phpunit/phpunit": "~9.3"
+        "roave/security-advisories": "dev-master"
     },
     "repositories": [
+        {"type": "git", "url": "https://gitlab.com/dicr/yii2-json.git"},
         {"type": "git", "url": "https://gitlab.com/dicr/yii2-http.git"},
         {"type": "git", "url": "https://gitlab.com/dicr/yii2-validate.git"},
         {"type": "composer", "url": "https://asset-packagist.org"}
