--- a/composer.json
+++ b/composer.json
@@ -24,10 +24,10 @@
     "minimum-stability": "RC",
     "prefer-stable": true,
     "require": {
-        "php": "~7.2",
+        "php": "~7.4 || ~8.0.1",
         "ext-json": "*",
         "yiisoft/yii2": "~2.0",
-        "dicr/yii2-json": "~1.0",
+        "dicr/yii2-json": "~2.0",
         "dicr/yii2-helper": "~4.0",
         "dicr/yii2-http": "~2.1",
         "dicr/yii2-validate": "~2.0"
@@ -36,9 +36,9 @@
         "roave/security-advisories": "dev-master"
     },
     "repositories": [
+        {"type": "composer", "url": "https://asset-packagist.org"},
         {"type": "git", "url": "https://gitlab.com/dicr/yii2-json.git"},
         {"type": "git", "url": "https://gitlab.com/dicr/yii2-http.git"},
-        {"type": "git", "url": "https://gitlab.com/dicr/yii2-validate.git"},
-        {"type": "composer", "url": "https://asset-packagist.org"}
+        {"type": "git", "url": "https://gitlab.com/dicr/yii2-validate.git"}
     ]
 }
